<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="com.example.wse.types.DashboardSettings"/>
        <variable name="theme" type="com.example.wse.types.DashboardTheme" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainActivityLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/accUnitLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/heading_select_acceleration_unit"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RadioGroup
            android:id="@+id/unitSelectionRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:checkedButton="@id/kmhRadioButton"
            app:layout_constraintTop_toBottomOf="@+id/accUnitLabel">

            <RadioButton
                android:id="@+id/kmhRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_km_h" />

            <RadioButton
                android:id="@+id/msRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_m_s" />

        </RadioGroup>

        <TextView
            android:id="@+id/decimalPrecisionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/heading_select_location_data_decimal_precision"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unitSelectionRadioGroup" />

        <Button
            android:id="@+id/navigateToCarDashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_go_to_car_dashboard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <SeekBar
            android:id="@+id/decimalPlacesSeekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:max="10"
            android:progress="2"
            android:scrollIndicators="top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/decimalPrecisionLabel" />

        <TextView
            android:id="@+id/yourNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/heading_what_is_your_name"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/decimalPlacesSeekBar" />

        <EditText
            android:id="@+id/editPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@{viewModel.userName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yourNameLabel" />

        <TextView
            android:id="@+id/themeSelectLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/heading_select_dashboard_theme"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPersonName" />

        <RadioGroup
            android:id="@+id/themeSelectRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/themeSelectLabel">

            <RadioButton
                android:id="@+id/lightThemeRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.theme == theme.LIGHT}"
                android:text="@string/label_light" />

            <RadioButton
                android:id="@+id/darkThemeRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.theme == theme.DARK}"
                android:text="@string/label_dark" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>